added two more module guides of dbms

--- a/content/dbms/13-database-security-and-encription.mdx
+++ b/content/dbms/13-database-security-and-encription.mdx
@@ -5,3 +5,65 @@ title: Database Security & Encryption
 description: Understand authentication, authorization, and encryption techniques in databases.
 author: SystemNode Team
 ---
+
+# Database Security & Encryption
+
+In today's world, data is the most valuable asset. It is important to secure data from unauthorized access and ensure that only authorized users can access it. Database security is the process of protecting the database from unauthorized access, data corruption, and data loss. It involves implementing security measures to ensure the confidentiality, integrity, and availability of data.
+
+## Why is Database Security Important?
+
+Imagine you run an online store where customers share personal information, including credit card details. If this data is not properly secured, hackers can steal it, leading to financial loss and reputational damage. Database security ensures that only authorized users can access and modify the data while protecting it from malicious attacks.
+
+## Key Concepts in Database Security
+
+### Authentication
+
+It is the process of verifying the identity of a user or system. Authentication ensures that only authorized users can access the database. 
+
+Common authentication methods include:
+
+- **Username and Password**: Users provide a username and password to log in to the database.
+- **Biometric Authentication**: Users verify their identity using biometric data such as fingerprints or facial recognition.
+- **Multi-factor Authentication (MFA)**: Users must provide multiple forms of identification, such as a password and a one-time code sent to their phone.
+- **Single Sign-On (SSO)**: Users can access multiple applications with a single set of credentials.
+- **OAuth and OpenID Connect**: Secure methods for granting access using third-party authentication providers (e.g., Google, Microsoft).
+
+### Authorization
+
+Once a user is authenticated, authorization determines what actions they can perform in the database. Authorization controls access to specific data, tables, or operations based on the user's role or permissions. 
+
+Common authorization mechanisms include:
+
+- **Role-Based Access Control (RBAC)**: Users are assigned roles (e.g., admin, user) with predefined permissions.
+- **Attribute-Based Access Control (ABAC)**: Access is granted based on attributes (e.g., user location, department).
+- **Discretionary Access Control (DAC)**: Users can control access to their own data.
+- **Mandatory Access Control (MAC)**: Access is determined by the system, not the user.
+
+### Encryption
+
+Encryption is the process of converting data into a secure format to prevent unauthorized access. Encrypted data can only be read by authorized users with the decryption key. 
+
+Common encryption techniques include:
+
+- **Symmetric Encryption**: Uses a single key to encrypt and decrypt data.
+- **Asymmetric Encryption**: Uses a pair of public and private keys for encryption and decryption.
+- **Hashing**: Converts data into a fixed-length hash value, used for data integrity verification.
+- **Transport Layer Security (TLS)**: Encrypts data transmitted over networks to prevent eavesdropping.
+- **Column-Level Encryption**: Encrypts specific columns in a database table.
+- **Transparent Data Encryption (TDE)**: Encrypts the entire database at the file level.
+
+## Common Database Security Threats
+
+1. **SQL Injection**: Attackers inject malicious SQL code into input fields to access or modify the database.
+2. **Cross-Site Scripting (XSS)**: Attackers inject malicious scripts into web pages to steal data or hijack user sessions.
+3. **Data Breaches**: Unauthorized access to sensitive data, leading to financial loss and reputational damage.
+4. **Insider Threats**: Malicious or negligent employees who misuse their access to the database.
+5. **Denial of Service (DoS)**: Attackers overwhelm the database with requests, causing it to become unresponsive.
+
+## Best Practices for Database Security
+
+1. **Use Strong Authentication**: Enforce complex passwords, multi-factor authentication, and regular password changes.
+2. **Implement Role-Based Access Control**: Assign roles with the least privilege necessary to perform their tasks.
+3. **Encrypt Sensitive Data**: Use encryption to protect data at rest and in transit.
+4. **Regularly Update and Patch**: Keep the database software up to date with security patches.
+5. **Monitor and Audit**: Monitor database activity, log access attempts, and audit user actions.
